package edu.uees.tutorias.domain;

/** Estados posibles de una reserva de tutoría. */
public enum EstadoReserva {
    SOLICITADA,
    CONFIRMADA,
    REPROGRAMADA,
    CANCELADA,
    COMPLETADA
}
